--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.30.1",
     "react-native-paper": "^4.11.2",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.3",
     "tinycolor2": "^1.4.2"
